--- a/.github/workflows/infra-project.yml
+++ b/.github/workflows/infra-project.yml
@@ -340,8 +340,10 @@ jobs:
           if (-not $Env:privDnsSubscription_param -or $Env:privDnsSubscription_param -eq '') {
             "privDnsSubscription_param=${{ env.dev_test_prod_sub_id }}" | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf8 -Append
           }
-          if (-not $Env:tags) { "tags=${{ env.tags }}" | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf8 -Append }
-          if (-not $Env:tagsProject) { "tagsProject=${{ env.tagsProject }}" | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf8 -Append }
+          $tagsValue = '${{ env.tags }}'
+          $tagsProjectValue = '${{ env.tagsProject }}'
+          if (-not $Env:tags) { "tags=$tagsValue" | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf8 -Append }
+          if (-not $Env:tagsProject) { "tagsProject=$tagsProjectValue" | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf8 -Append }
           if (-not $Env:aifactory_salt_random -or $Env:aifactory_salt_random -eq '') { "aifactory_salt_random=${{ env.AIFACTORY_SALT_RANDOM }}" | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf8 -Append }
 
       - name: Resolve network env placeholders
