--- a/.github/workflows/infra-project.yml
+++ b/.github/workflows/infra-project.yml
@@ -280,17 +280,17 @@ jobs:
       projectSuffix: ${{ vars.PROJECT_SUFFIX || '-rg' }}
 
     steps:
-      - name: Azure Login
+      - name: 00_Azure_Login
         uses: azure/login@v2
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      - name: Checkout
+      - name: 00_Checkout
         uses: actions/checkout@v4
         with:
           submodules: true
 
-      - name: Validate required configuration
+      - name: 00_Validate_Required_Configuration
         run: |
           $required = @(
             'dev_test_prod',
@@ -328,7 +328,7 @@ jobs:
           }
           if ($errors) { $errors | ForEach-Object { Write-Error $_ }; exit 1 }
 
-      - name: Initialize derived variables
+      - name: 00_Initialize_Derived_Variables
         run: |
           $net = '${{ env.network_env }}'
           if (-not $net) { $net = '${{ env.dev_test_prod }}' }
@@ -346,7 +346,7 @@ jobs:
           if (-not $Env:tagsProject) { "tagsProject=$tagsProjectValue" | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf8 -Append }
           if (-not $Env:aifactory_salt_random -or $Env:aifactory_salt_random -eq '') { "aifactory_salt_random=${{ env.AIFACTORY_SALT_RANDOM }}" | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf8 -Append }
 
-      - name: Resolve network env placeholders
+      - name: 00_Resolve_Network_Env_Placeholders
         shell: bash
         run: |
           set -e
@@ -373,7 +373,7 @@ jobs:
           echo "Resolved vnetResourceGroup: $VNET_RG"
           echo "Resolved vnetNameFull: $VNET_NAME"
 
-      - name: Print info
+      - name: 00_Print_Info
         run: |
           echo "env.dev_test_prod=${{ env.dev_test_prod }}"
           echo "env.project_number_000=${{ env.project_number_000 }}"
@@ -383,7 +383,7 @@ jobs:
           echo "env.useCommonACR=${{ env.useCommonACR }}"
           echo "env.network_env=${{ env.network_env }}"
 
-      - name: Validate project subnet exists
+      - name: 00_Validate_Project_Subnet_Exists_(Networking-START)
         if: env.runNetworkingVar != 'false' && env.BYO_subnets != 'true'
         shell: bash
         run: |
@@ -401,14 +401,14 @@ jobs:
             echo "Subnet already exists; networking can be skipped if desired."; exit 0; fi
           echo "Subnet missing, networking will deploy create-if-not-exists."
 
-      - name: Get runner public IP
+      - name: 01_Get_Runner_Public_IP
         if: env.disable_whitelisting_for_build_agents != 'true'
         run: |
           $resp = Invoke-RestMethod http://ipinfo.io/json | Select -exp ip
           "runner_ip=$resp" | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf8 -Append
           echo "runner_ip=$resp"
 
-      - name: Allow runner IP on seeding Key Vault
+      - name: 02_Allow_Runner_IP_on_Seeding_KeyVault
         if: env.disable_whitelisting_for_build_agents != 'true'
         uses: azure/cli@v2
         with:
@@ -427,7 +427,7 @@ jobs:
               --name "${{ env.admin_bicep_kv_fw }}" \
               --ip-address "${{ env.runner_ip }}"
 
-      - name: Download secrets from seeding Key Vault
+      - name: 03_Download_Secrets_From_Seeding_KeyVault
         uses: azure/cli@v2
         with:
           azcliversion: latest
@@ -437,36 +437,103 @@ jobs:
             echo "common_sp_secret_value=$(az keyvault secret show --vault-name \"${{ env.admin_bicep_kv_fw }}\" --name \"${{ env.common_sp_secret_seeding_kv_name }}\" --query 'value' --output tsv)" >> $GITHUB_ENV
             echo "project_sp_oid_value=$(az keyvault secret show --vault-name \"${{ env.admin_bicep_kv_fw }}\" --name \"${{ env.project_service_principal_OID_seeding_kv_name }}\" --query 'value' --output tsv)" >> $GITHUB_ENV
 
-      - name: Calculate subnet allocations
+      - name: 04_Create_Temporary_JSON_Parameter_Files
+        if: env.runNetworkingVar != 'false' && env.BYO_subnets != 'true'
+        run: |
+          $paramDir = Join-Path $Env:GITHUB_WORKSPACE 'aifactory/parameters'
+          New-Item -ItemType Directory -Force -Path $paramDir | Out-Null
+
+          $globals1 = @{
+            '$schema' = 'https://schema.management.azure.com/schemas/2019-04-01/deploymentParameters.json#'
+            contentVersion = '1.0.0.0'
+            parameters = @{
+              aifactorySuffixRG    = @{ value = '${{ env.admin_aifactorySuffixRG }}' }
+              commonRGNamePrefix   = @{ value = '${{ env.admin_aifactoryPrefixRG }}' }
+              locationSuffix       = @{ value = '${{ env.admin_locationSuffix }}' }
+              location             = @{ value = '${{ env.admin_location }}' }
+            }
+          }
+          $globals1 | ConvertTo-Json -Depth 5 | Out-File (Join-Path $paramDir '10-esml-globals-1.json') -Encoding utf8
+
+          $globals2 = @{
+            '$schema' = 'https://schema.management.azure.com/schemas/2019-04-01/deploymentParameters.json#'
+            contentVersion = '1.0.0.0'
+            parameters = @{
+              commonResourceSuffix = @{ value = '${{ env.admin_commonResourceSuffix }}' }
+              vnetNameBase         = @{ value = '${{ env.vnetNameBase }}' }
+            }
+          }
+          $globals2 | ConvertTo-Json -Depth 5 | Out-File (Join-Path $paramDir '10-esml-globals-2-12_13_21_22.json') -Encoding utf8
+
+          $globals4 = @{
+            '$schema' = 'https://schema.management.azure.com/schemas/2019-04-01/deploymentParameters.json#'
+            contentVersion = '1.0.0.0'
+            parameters = @{
+              resourceSuffix = @{ value = '${{ env.admin_prjResourceSuffix }}' }
+              tenantId       = @{ value = '${{ env.tenantId }}' }
+            }
+          }
+          $globals4 | ConvertTo-Json -Depth 5 | Out-File (Join-Path $paramDir '10-esml-globals-4-13_21_22.json') -Encoding utf8
+
+          $projectParams = @{
+            '$schema' = 'https://schema.management.azure.com/schemas/2019-04-01/deploymentParameters.json#'
+            contentVersion = '1.0.0.0'
+            parameters = @{
+              vnetResourceGroupBase = @{ value = '${{ env.vnetResourceGroupBase }}' }
+            }
+          }
+          $projectParams | ConvertTo-Json -Depth 5 | Out-File (Join-Path $paramDir '21-22-esml-prj-parameters.json') -Encoding utf8
+
+          $override = @{
+            '$schema' = 'https://schema.management.azure.com/schemas/2019-04-01/deploymentParameters.json#'
+            contentVersion = '1.0.0.0'
+            parameters = @{
+              vnetResourceGroup_param      = @{ value = '${{ env.vnetResourceGroup_resolved }}' }
+              vnetNameFull_param           = @{ value = '${{ env.vnetNameFull_resolved }}' }
+              subnetCommon                 = @{ value = '${{ env.subnetCommon }}' }
+              subnetCommonScoring          = @{ value = '${{ env.subnetCommonScoring }}' }
+              subnetCommonPowerbiGw        = @{ value = '${{ env.subnetCommonPowerbiGw }}' }
+              subnetProjGenAI              = @{ value = '${{ env.subnetProjGenAI }}' }
+              subnetProjAKS                = @{ value = '${{ env.subnetProjAKS }}' }
+              subnetProjAKS2               = @{ value = '${{ env.subnetProjAKS2 }}' }
+              subnetProjACA                = @{ value = '${{ env.subnetProjACA }}' }
+              subnetProjACA2               = @{ value = '${{ env.subnetProjACA2 }}' }
+              subnetProjDatabricksPublic   = @{ value = '${{ env.subnetProjDatabricksPublic }}' }
+              subnetProjDatabricksPrivate  = @{ value = '${{ env.subnetProjDatabricksPrivate }}' }
+            }
+          }
+          $override | ConvertTo-Json -Depth 5 | Out-File (Join-Path $paramDir '10-esml-globals-override.json') -Encoding utf8
+
+      - name: 05_Calculate_Subnet_Allocations
         if: env.runNetworkingVar != 'false' && env.BYO_subnets != 'true'
         working-directory: ${{ github.workspace }}/azure-enterprise-scale-ml/environment_setup/aifactory/bicep/scripts
         run: |
-          sudo pwsh -Command "${{ github.workspace }}/azure-enterprise-scale-ml/environment_setup/aifactory/bicep/scripts/subnetCalc_v2.ps1" \
-            -bicepPar1 '../../../../../aifactory/parameters/10-esml-globals-1.json' \
-            -bicepPar2 '../../../../../aifactory/parameters/10-esml-globals-2-12_13_21_22.json' \
-            -bicepPar3 '../../../../../aifactory/parameters/10-esml-globals-4-13_21_22.json' \
-            -bicepPar4 '../../../../../aifactory/parameters/21-22-esml-prj-parameters.json' \
-            -bicepPar5 '../../../../../aifactory/parameters/10-esml-globals-override.json' \
-            -filePath '../../../../../aifactory/parameters/' \
-            -spObjId '${{ env.common_sp_appid_value }}' \
-            -spSecret '${{ env.common_sp_secret_value }}' \
-            -env '${{ env.dev_test_prod }}' \
-            -subscriptionId '${{ env.dev_test_prod_sub_id }}' \
-            -prjResourceSuffix '${{ env.admin_prjResourceSuffix }}' \
-            -aifactorySuffixRGADO '${{ env.admin_aifactorySuffixRG }}' \
-            -commonRGNamePrefixVar '${{ env.admin_aifactoryPrefixRG }}' \
-            -commonResourceSuffixADO '${{ env.admin_commonResourceSuffix }}' \
-            -locationADO '${{ env.admin_location }}' \
-            -locationSuffixADO '${{ env.admin_locationSuffix }}' \
-            -projectTypeADO '${{ env.admin_projectType }}' \
-            -vnetResourceGroupBase '${{ env.vnetResourceGroupBase }}' \
-            -vnetNameBase '${{ env.vnetNameBase }}' \
-            -tenantId '${{ env.tenantId }}' \
-            -vnetResourceGroup_param '${{ env.vnetResourceGroup_resolved }}' \
-            -vnetNameFull_param '${{ env.vnetNameFull_resolved }}' \
+          pwsh -File "${{ github.workspace }}/azure-enterprise-scale-ml/environment_setup/aifactory/bicep/scripts/subnetCalc_v2.ps1" `
+            -bicepPar1 '../../../../../aifactory/parameters/10-esml-globals-1.json' `
+            -bicepPar2 '../../../../../aifactory/parameters/10-esml-globals-2-12_13_21_22.json' `
+            -bicepPar3 '../../../../../aifactory/parameters/10-esml-globals-4-13_21_22.json' `
+            -bicepPar4 '../../../../../aifactory/parameters/21-22-esml-prj-parameters.json' `
+            -bicepPar5 '../../../../../aifactory/parameters/10-esml-globals-override.json' `
+            -filePath '../../../../../aifactory/parameters/' `
+            -spObjId '${{ env.common_sp_appid_value }}' `
+            -spSecret '${{ env.common_sp_secret_value }}' `
+            -env '${{ env.dev_test_prod }}' `
+            -subscriptionId '${{ env.dev_test_prod_sub_id }}' `
+            -prjResourceSuffix '${{ env.admin_prjResourceSuffix }}' `
+            -aifactorySuffixRGADO '${{ env.admin_aifactorySuffixRG }}' `
+            -commonRGNamePrefixVar '${{ env.admin_aifactoryPrefixRG }}' `
+            -commonResourceSuffixADO '${{ env.admin_commonResourceSuffix }}' `
+            -locationADO '${{ env.admin_location }}' `
+            -locationSuffixADO '${{ env.admin_locationSuffix }}' `
+            -projectTypeADO '${{ env.admin_projectType }}' `
+            -vnetResourceGroupBase '${{ env.vnetResourceGroupBase }}' `
+            -vnetNameBase '${{ env.vnetNameBase }}' `
+            -tenantId '${{ env.tenantId }}' `
+            -vnetResourceGroup_param '${{ env.vnetResourceGroup_resolved }}' `
+            -vnetNameFull_param '${{ env.vnetNameFull_resolved }}' `
             -useServicePrincipal
 
-      - name: Check subnet existence for project
+      - name: 06_Check_Subnet_Existence
         if: env.runNetworkingVar != 'false' && env.BYO_subnets != 'true'
         uses: azure/cli@v2
         with:
@@ -506,7 +573,7 @@ jobs:
             check_subnet_exists "snt-prj${projectNumber}-dbxpriv" "sntDatabricksPrivExists"
             check_subnet_exists "snt-prj${projectNumber}-dbxpub" "sntDatabricksPubExists"
 
-      - name: Deploy project subnets + NSGs (GenAI)
+      - name: 07_Deploy_Subnet_IfNotExists
         if: env.runNetworkingVar != 'false' && env.BYO_subnets != 'true'
         uses: azure/cli@v2
         with:
@@ -562,7 +629,61 @@ jobs:
               --parameters azureFirewallPrivateIp="${{ env.aksAzureFirewallPrivateIp }}" \
               --debug
 
-      - name: Generate dynamic network parameters
+      - name: 08_Remove_IP_From_Seeding_Keyvault_(Networking-END)
+        if: always() && env.disable_whitelisting_for_build_agents != 'true'
+        uses: azure/cli@v2
+        with:
+          azcliversion: latest
+          inlineScript: |
+            az account set --subscription "${{ env.admin_bicep_input_keyvault_subscription }}"
+            az keyvault network-rule remove \
+              --resource-group "${{ env.admin_bicep_kv_fw_rg }}" \
+              --name "${{ env.admin_bicep_kv_fw }}" \
+              --ip-address "${{ env.runner_ip }}" || true
+
+      - name: 09_Check_For_Submodule
+        run: |
+          Write-Host "Checking git submodule status..."
+          git submodule status
+
+      - name: 10_Check_Subnet_Existence
+        if: env.runNetworkingVar != 'false' && env.BYO_subnets != 'true'
+        run: |
+          Write-Host "Subnet existence flags:"
+          Write-Host "  sntGenaiExists=${{ env.sntGenaiExists }}"
+          Write-Host "  sntAcaExists=${{ env.sntAcaExists }}"
+          Write-Host "  sntAca002Exists=${{ env.sntAca002Exists }}"
+          Write-Host "  sntAksExists=${{ env.sntAksExists }}"
+          Write-Host "  sntAks002Exists=${{ env.sntAks002Exists }}"
+          Write-Host "  sntDatabricksPrivExists=${{ env.sntDatabricksPrivExists }}"
+          Write-Host "  sntDatabricksPubExists=${{ env.sntDatabricksPubExists }}"
+
+      - name: 11_Generate_Random_Value
+        run: |
+          $randomValue = [System.Guid]::NewGuid().ToString('N').Substring(0,10)
+          "deployment_random_value=$randomValue" | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf8 -Append
+          Write-Host "Generated deployment_random_value=$randomValue"
+
+      - name: 12_Allow_Runner_IP_on_Seeding_KeyVault
+        if: env.disable_whitelisting_for_build_agents != 'true'
+        uses: azure/cli@v2
+        with:
+          azcliversion: latest
+          inlineScript: |
+            az account set --subscription "${{ env.admin_bicep_input_keyvault_subscription }}"
+            az keyvault update \
+              --name "${{ env.admin_bicep_kv_fw }}" \
+              --resource-group "${{ env.admin_bicep_kv_fw_rg }}" \
+              --default-action Deny \
+              --public-network-access Enabled
+            echo "Waiting for Key Vault network rules to propagate..."
+            sleep 10
+            az keyvault network-rule add \
+              --resource-group "${{ env.admin_bicep_kv_fw_rg }}" \
+              --name "${{ env.admin_bicep_kv_fw }}" \
+              --ip-address "${{ env.runner_ip }}"
+
+      - name: 14_Generate_Dynamic_Network_Parameters
         working-directory: ${{ github.workspace }}/azure-enterprise-scale-ml/environment_setup/aifactory/bicep/scripts
         run: |
           sudo pwsh -Command "${{ github.workspace }}/azure-enterprise-scale-ml/environment_setup/aifactory/bicep/scripts/genDynamicNetworkParamFile.ps1" \
@@ -585,7 +706,7 @@ jobs:
             -commonRGNamePrefixVar '${{ env.admin_aifactoryPrefixRG }}' \
             -projectTypeADO '${{ env.admin_projectType }}'
 
-      - name: Check Private DNS zones
+      - name: 15_Check_Private_DNS_Zones
         uses: azure/cli@v2
         with:
           azcliversion: latest
@@ -612,7 +733,7 @@ jobs:
               echo "${key}Exists=$exists" >> $GITHUB_ENV
             done
 
-      - name: Check resource existence (fuzzy)
+      - name: 16_Check_Resource_Existence
         uses: azure/cli@v2
         with:
           azcliversion: latest
@@ -688,7 +809,7 @@ jobs:
             echo "storageAccount1001Exists=$(resource_exists_fuzzy "$targetRG" "Microsoft.Storage/storageAccounts" "$storageAccount1001Name" "")" >> $GITHUB_ENV
             echo "storageAccount2001Exists=$(resource_exists_fuzzy "$targetRG" "Microsoft.Storage/storageAccounts" "$storageAccount2001Name" "")" >> $GITHUB_ENV
 
-      - name: Extract aifactory_salt_random if MI exists
+      - name: 17_Extract_aifactory_salt_random
         uses: azure/cli@v2
         with:
           azcliversion: latest
