--- a/.github/workflows/infra-project.yml
+++ b/.github/workflows/infra-project.yml
@@ -496,6 +496,7 @@ jobs:
 
       - name: 05_Calculate_Subnet_Allocations
         if: env.runNetworkingVar != 'false' && env.BYO_subnets != 'true'
+        working-directory: ${{ github.workspace }}/azure-enterprise-scale-ml/environment_setup/aifactory/bicep/scripts
         shell: pwsh
         run: |
           Write-Host "=== Subnet Calculation Starting ==="
@@ -506,13 +507,13 @@ jobs:
           Write-Host "  VNet RG: ${{ env.vnetResourceGroup_resolved }}"
           Write-Host "  Project Type: ${{ env.admin_projectType }}"
           
-          & '${{ github.workspace }}/azure-enterprise-scale-ml/environment_setup/aifactory/bicep/scripts/subnetCalc_v2.ps1' `
-            -bicepPar1 '${{ github.workspace }}/aifactory/parameters/10-esml-globals-1.json' `
-            -bicepPar2 '${{ github.workspace }}/aifactory/parameters/10-esml-globals-2-12_13_21_22.json' `
-            -bicepPar3 '${{ github.workspace }}/aifactory/parameters/10-esml-globals-4-13_21_22.json' `
-            -bicepPar4 '${{ github.workspace }}/aifactory/parameters/21-22-esml-prj-parameters.json' `
-            -bicepPar5 '${{ github.workspace }}/aifactory/parameters/10-esml-globals-override.json' `
-            -filePath '${{ github.workspace }}/aifactory/parameters/' `
+          & './subnetCalc_v2.ps1' `
+            -bicepPar1 '../../../../../aifactory/parameters/10-esml-globals-1.json' `
+            -bicepPar2 '../../../../../aifactory/parameters/10-esml-globals-2-12_13_21_22.json' `
+            -bicepPar3 '../../../../../aifactory/parameters/10-esml-globals-4-13_21_22.json' `
+            -bicepPar4 '../../../../../aifactory/parameters/21-22-esml-prj-parameters.json' `
+            -bicepPar5 '../../../../../aifactory/parameters/10-esml-globals-override.json' `
+            -filePath '../../../../../aifactory/parameters/' `
             -spObjId '${{ env.common_sp_appid_value }}' `
             -spSecret '${{ env.common_sp_secret_value }}' `
             -env '${{ env.dev_test_prod }}' `
@@ -532,11 +533,11 @@ jobs:
             -useServicePrincipal
           
           Write-Host "`n=== Listing generated parameter files ==="
-          Get-ChildItem '${{ github.workspace }}/aifactory/parameters/' | Format-Table Name, Length
+          Get-ChildItem '../../../../../aifactory/parameters/' | Format-Table Name, Length
           
           Write-Host "`n=== Content of subnetParameters.json ==="
-          if (Test-Path '${{ github.workspace }}/aifactory/parameters/subnetParameters.json') {
-            Get-Content '${{ github.workspace }}/aifactory/parameters/subnetParameters.json' | Write-Host
+          if (Test-Path '../../../../../aifactory/parameters/subnetParameters.json') {
+            Get-Content '../../../../../aifactory/parameters/subnetParameters.json' | Write-Host
           } else {
             Write-Error "subnetParameters.json was not created!"
             exit 1
@@ -689,19 +690,20 @@ jobs:
               --ip-address "${{ env.runner_ip }}"
 
       - name: 14_Generate_Dynamic_Network_Parameters
+        working-directory: ${{ github.workspace }}/azure-enterprise-scale-ml/environment_setup/aifactory/bicep/scripts
         run: |
-          sudo pwsh -Command "${{ github.workspace }}/azure-enterprise-scale-ml/environment_setup/aifactory/bicep/scripts/genDynamicNetworkParamFile.ps1" \
+          sudo pwsh -Command "./genDynamicNetworkParamFile.ps1" \
             -spObjId '${{ env.common_sp_appid_value }}' \
             -spSecret '${{ env.common_sp_secret_value }}' \
             -BYO_subnets '${{ env.BYO_subnets }}' \
             -network_env '${{ env.network_env }}' \
             -useServicePrincipal \
-            -bicepPar1 '${{ github.workspace }}/aifactory/parameters/10-esml-globals-1.json' \
-            -bicepPar2 '${{ github.workspace }}/aifactory/parameters/10-esml-globals-2-12_13_21_22.json' \
-            -bicepPar3 '${{ github.workspace }}/aifactory/parameters/10-esml-globals-4-13_21_22.json' \
-            -bicepPar4 '${{ github.workspace }}/aifactory/parameters/21-22-esml-prj-parameters.json' \
-            -bicepPar5 '${{ github.workspace }}/aifactory/parameters/10-esml-globals-override.json' \
-            -filePath '${{ github.workspace }}/aifactory/parameters/' \
+            -bicepPar1 '../../../../../aifactory/parameters/10-esml-globals-1.json' \
+            -bicepPar2 '../../../../../aifactory/parameters/10-esml-globals-2-12_13_21_22.json' \
+            -bicepPar3 '../../../../../aifactory/parameters/10-esml-globals-4-13_21_22.json' \
+            -bicepPar4 '../../../../../aifactory/parameters/21-22-esml-prj-parameters.json' \
+            -bicepPar5 '../../../../../aifactory/parameters/10-esml-globals-override.json' \
+            -filePath '../../../../../aifactory/parameters/' \
             -env '${{ env.dev_test_prod }}' \
             -locationSuffixADO '${{ env.admin_locationSuffix }}' \
             -aifactorySuffixRGADO '${{ env.admin_aifactorySuffixRG }}' \
