--- a/.github/workflows/infra-project.yml
+++ b/.github/workflows/infra-project.yml
@@ -497,8 +497,8 @@ jobs:
       - name: 05_Calculate_Subnet_Allocations
         if: env.runNetworkingVar != 'false' && env.BYO_subnets != 'true'
         working-directory: ${{ github.workspace }}/azure-enterprise-scale-ml/environment_setup/aifactory/bicep/scripts
-        shell: pwsh
         run: |
+          sudo pwsh -Command '
           Write-Host "=== Subnet Calculation Starting ==="
           Write-Host "Parameters:"
           Write-Host "  Environment: ${{ env.dev_test_prod }}"
@@ -507,41 +507,44 @@ jobs:
           Write-Host "  VNet RG: ${{ env.vnetResourceGroup_resolved }}"
           Write-Host "  Project Type: ${{ env.admin_projectType }}"
           
-          & './subnetCalc_v2.ps1' `
-            -bicepPar1 '../../../../../aifactory/parameters/10-esml-globals-1.json' `
-            -bicepPar2 '../../../../../aifactory/parameters/10-esml-globals-2-12_13_21_22.json' `
-            -bicepPar3 '../../../../../aifactory/parameters/10-esml-globals-4-13_21_22.json' `
-            -bicepPar4 '../../../../../aifactory/parameters/21-22-esml-prj-parameters.json' `
-            -bicepPar5 '../../../../../aifactory/parameters/10-esml-globals-override.json' `
-            -filePath '../../../../../aifactory/parameters/' `
-            -spObjId '${{ env.common_sp_appid_value }}' `
-            -spSecret '${{ env.common_sp_secret_value }}' `
-            -env '${{ env.dev_test_prod }}' `
-            -subscriptionId '${{ env.dev_test_prod_sub_id }}' `
-            -prjResourceSuffix '${{ env.admin_prjResourceSuffix }}' `
-            -aifactorySuffixRGADO '${{ env.admin_aifactorySuffixRG }}' `
-            -commonRGNamePrefixVar '${{ env.admin_aifactoryPrefixRG }}' `
-            -commonResourceSuffixADO '${{ env.admin_commonResourceSuffix }}' `
-            -locationADO '${{ env.admin_location }}' `
-            -locationSuffixADO '${{ env.admin_locationSuffix }}' `
-            -projectTypeADO '${{ env.admin_projectType }}' `
-            -vnetResourceGroupBase '${{ env.vnetResourceGroupBase }}' `
-            -vnetNameBase '${{ env.vnetNameBase }}' `
-            -tenantId '${{ env.tenantId }}' `
-            -vnetResourceGroup_param '${{ env.vnetResourceGroup_resolved }}' `
-            -vnetNameFull_param '${{ env.vnetNameFull_resolved }}' `
+          & "./subnetCalc_v2.ps1" `
+            -bicepPar1 "../../../../../aifactory/parameters/10-esml-globals-1.json" `
+            -bicepPar2 "../../../../../aifactory/parameters/10-esml-globals-2-12_13_21_22.json" `
+            -bicepPar3 "../../../../../aifactory/parameters/10-esml-globals-4-13_21_22.json" `
+            -bicepPar4 "../../../../../aifactory/parameters/21-22-esml-prj-parameters.json" `
+            -bicepPar5 "../../../../../aifactory/parameters/10-esml-globals-override.json" `
+            -filePath "../../../../../aifactory/parameters/" `
+            -spObjId "${{ env.common_sp_appid_value }}" `
+            -spSecret "${{ env.common_sp_secret_value }}" `
+            -env "${{ env.dev_test_prod }}" `
+            -subscriptionId "${{ env.dev_test_prod_sub_id }}" `
+            -prjResourceSuffix "${{ env.admin_prjResourceSuffix }}" `
+            -aifactorySuffixRGADO "${{ env.admin_aifactorySuffixRG }}" `
+            -commonRGNamePrefixVar "${{ env.admin_aifactoryPrefixRG }}" `
+            -commonResourceSuffixADO "${{ env.admin_commonResourceSuffix }}" `
+            -locationADO "${{ env.admin_location }}" `
+            -locationSuffixADO "${{ env.admin_locationSuffix }}" `
+            -projectTypeADO "${{ env.admin_projectType }}" `
+            -vnetResourceGroupBase "${{ env.vnetResourceGroupBase }}" `
+            -vnetNameBase "${{ env.vnetNameBase }}" `
+            -tenantId "${{ env.tenantId }}" `
+            -vnetResourceGroup_param "${{ env.vnetResourceGroup_resolved }}" `
+            -vnetNameFull_param "${{ env.vnetNameFull_resolved }}" `
             -useServicePrincipal
           
-          Write-Host "`n=== Listing generated parameter files ==="
-          Get-ChildItem '../../../../../aifactory/parameters/' | Format-Table Name, Length
+          Write-Host ""
+          Write-Host "=== Listing generated parameter files ==="
+          Get-ChildItem "../../../../../aifactory/parameters/" | Format-Table Name, Length
           
-          Write-Host "`n=== Content of subnetParameters.json ==="
-          if (Test-Path '../../../../../aifactory/parameters/subnetParameters.json') {
-            Get-Content '../../../../../aifactory/parameters/subnetParameters.json' | Write-Host
+          Write-Host ""
+          Write-Host "=== Content of subnetParameters.json ==="
+          if (Test-Path "../../../../../aifactory/parameters/subnetParameters.json") {
+            Get-Content "../../../../../aifactory/parameters/subnetParameters.json" | Write-Host
           } else {
             Write-Error "subnetParameters.json was not created!"
             exit 1
           }
+          '
 
       - name: 06_Check_Subnet_Existence
         if: env.runNetworkingVar != 'false' && env.BYO_subnets != 'true'
