--- a/.github/workflows/infra-project.yml
+++ b/.github/workflows/infra-project.yml
@@ -508,12 +508,12 @@ jobs:
           Write-Host "  Project Type: ${{ env.admin_projectType }}"
           
           & "./subnetCalc_v2.ps1" `
-            -bicepPar1 "../../../../../aifactory/parameters/10-esml-globals-1.json" `
-            -bicepPar2 "../../../../../aifactory/parameters/10-esml-globals-2-12_13_21_22.json" `
-            -bicepPar3 "../../../../../aifactory/parameters/10-esml-globals-4-13_21_22.json" `
-            -bicepPar4 "../../../../../aifactory/parameters/21-22-esml-prj-parameters.json" `
-            -bicepPar5 "../../../../../aifactory/parameters/10-esml-globals-override.json" `
-            -filePath "../../../../../aifactory/parameters/" `
+            -bicepPar1 "../../../../aifactory/parameters/10-esml-globals-1.json" `
+            -bicepPar2 "../../../../aifactory/parameters/10-esml-globals-2-12_13_21_22.json" `
+            -bicepPar3 "../../../../aifactory/parameters/10-esml-globals-4-13_21_22.json" `
+            -bicepPar4 "../../../../aifactory/parameters/21-22-esml-prj-parameters.json" `
+            -bicepPar5 "../../../../aifactory/parameters/10-esml-globals-override.json" `
+            -filePath "../../../../aifactory/parameters/" `
             -spObjId "${{ env.common_sp_appid_value }}" `
             -spSecret "${{ env.common_sp_secret_value }}" `
             -env "${{ env.dev_test_prod }}" `
@@ -534,12 +534,12 @@ jobs:
           
           Write-Host ""
           Write-Host "=== Listing generated parameter files ==="
-          Get-ChildItem "../../../../../aifactory/parameters/" | Format-Table Name, Length
+          Get-ChildItem "../../../../aifactory/parameters/" | Format-Table Name, Length
           
           Write-Host ""
           Write-Host "=== Content of subnetParameters.json ==="
-          if (Test-Path "../../../../../aifactory/parameters/subnetParameters.json") {
-            Get-Content "../../../../../aifactory/parameters/subnetParameters.json" | Write-Host
+          if (Test-Path "../../../../aifactory/parameters/subnetParameters.json") {
+            Get-Content "../../../../aifactory/parameters/subnetParameters.json" | Write-Host
           } else {
             Write-Error "subnetParameters.json was not created!"
             exit 1
@@ -701,12 +701,12 @@ jobs:
             -BYO_subnets '${{ env.BYO_subnets }}' \
             -network_env '${{ env.network_env }}' \
             -useServicePrincipal \
-            -bicepPar1 '../../../../../aifactory/parameters/10-esml-globals-1.json' \
-            -bicepPar2 '../../../../../aifactory/parameters/10-esml-globals-2-12_13_21_22.json' \
-            -bicepPar3 '../../../../../aifactory/parameters/10-esml-globals-4-13_21_22.json' \
-            -bicepPar4 '../../../../../aifactory/parameters/21-22-esml-prj-parameters.json' \
-            -bicepPar5 '../../../../../aifactory/parameters/10-esml-globals-override.json' \
-            -filePath '../../../../../aifactory/parameters/' \
+            -bicepPar1 '../../../../aifactory/parameters/10-esml-globals-1.json' \
+            -bicepPar2 '../../../../aifactory/parameters/10-esml-globals-2-12_13_21_22.json' \
+            -bicepPar3 '../../../../aifactory/parameters/10-esml-globals-4-13_21_22.json' \
+            -bicepPar4 '../../../../aifactory/parameters/21-22-esml-prj-parameters.json' \
+            -bicepPar5 '../../../../aifactory/parameters/10-esml-globals-override.json' \
+            -filePath '../../../../aifactory/parameters/' \
             -env '${{ env.dev_test_prod }}' \
             -locationSuffixADO '${{ env.admin_locationSuffix }}' \
             -aifactorySuffixRGADO '${{ env.admin_aifactorySuffixRG }}' \
