--- a/.github/workflows/infra-project.yml
+++ b/.github/workflows/infra-project.yml
@@ -358,6 +358,18 @@ jobs:
           echo "Original vnetNameFull_param: $VNET_NAME"
           echo "network_env value: $NETWORK_ENV"
 
+          # If empty, construct default values
+          if [ -z "$VNET_RG" ]; then
+            VNET_RG="${{ env.admin_aifactoryPrefixRG }}${{ env.vnetResourceGroupBase }}-${{ env.admin_locationSuffix }}-${{ env.dev_test_prod }}${{ env.admin_aifactorySuffixRG }}"
+            echo "vnetResourceGroup_param was empty, using default: $VNET_RG"
+          fi
+
+          if [ -z "$VNET_NAME" ]; then
+            VNET_NAME="${{ env.vnetNameBase }}-${{ env.admin_locationSuffix }}-${{ env.dev_test_prod }}${{ env.admin_commonResourceSuffix }}"
+            echo "vnetNameFull_param was empty, using default: $VNET_NAME"
+          fi
+
+          # Replace <network_env> placeholder if present
           if [[ "$VNET_RG" == *"<network_env>"* ]]; then
             echo "Found <network_env> placeholder in vnetResourceGroup_param"
             VNET_RG="${VNET_RG//<network_env>/$NETWORK_ENV}"
@@ -433,24 +445,24 @@ jobs:
           azcliversion: latest
           inlineScript: |
             az account set --subscription "${{ env.admin_bicep_input_keyvault_subscription }}"
-            echo "common_sp_appid_value=$(az keyvault secret show --vault-name \"${{ env.admin_bicep_kv_fw }}\" --name \"${{ env.COMMON_SERVICE_PRINCIPAL_KV_S_NAME_APPID }}\" --query 'value' --output tsv)" >> $GITHUB_ENV
-            echo "common_sp_secret_value=$(az keyvault secret show --vault-name \"${{ env.admin_bicep_kv_fw }}\" --name \"${{ env.COMMON_SERVICE_PRINCIPAL_KV_S_NAME_SECRET }}\" --query 'value' --output tsv)" >> $GITHUB_ENV
-            echo "project_sp_oid_value=$(az keyvault secret show --vault-name \"${{ env.admin_bicep_kv_fw }}\" --name \"${{ env.PROJECT_SERVICE_PRINCIPAL_KV_S_NAME_OID }}\" --query 'value' --output tsv)" >> $GITHUB_ENV
+            echo "common_sp_appid_value=$(az keyvault secret show --vault-name \"${{ env.admin_bicep_kv_fw }}\" --name \"${{ env.common_sp_appid_seeding_kv_name }}\" --query 'value' --output tsv)" >> $GITHUB_ENV
+            echo "common_sp_secret_value=$(az keyvault secret show --vault-name \"${{ env.admin_bicep_kv_fw }}\" --name \"${{ env.common_sp_secret_seeding_kv_name }}\" --query 'value' --output tsv)" >> $GITHUB_ENV
+            echo "project_sp_oid_value=$(az keyvault secret show --vault-name \"${{ env.admin_bicep_kv_fw }}\" --name \"${{ env.project_service_principal_OID_seeding_kv_name }}\" --query 'value' --output tsv)" >> $GITHUB_ENV
 
       - name: 03b_Validate_Service_Principal_Credentials
         run: |
           Write-Host "=== Validating Service Principal Credentials ==="
           Write-Host "Key Vault: ${{ env.admin_bicep_kv_fw }}"
           Write-Host "Expected secret names:"
-          Write-Host "  - common_sp_appid: ${{ env.COMMON_SERVICE_PRINCIPAL_KV_S_NAME_APPID }}"
-          Write-Host "  - common_sp_secret: ${{ env.COMMON_SERVICE_PRINCIPAL_KV_S_NAME_SECRET }}"
-          Write-Host "  - project_sp_oid: ${{ env.PROJECT_SERVICE_PRINCIPAL_KV_S_NAME_OID }}"
+          Write-Host "  - common_sp_appid: ${{ env.common_sp_appid_seeding_kv_name }}"
+          Write-Host "  - common_sp_secret: ${{ env.common_sp_secret_seeding_kv_name }}"
+          Write-Host "  - project_sp_oid: ${{ env.project_service_principal_OID_seeding_kv_name }}"
           
           $hasError = $false
           
           $appId = $Env:common_sp_appid_value
           if ([string]::IsNullOrWhiteSpace($appId)) {
-            Write-Error "common_sp_appid_value is empty! Secret '${{ env.COMMON_SERVICE_PRINCIPAL_KV_S_NAME_APPID }}' not found in Key Vault."
+            Write-Error "common_sp_appid_value is empty! Secret '${{ env.common_sp_appid_seeding_kv_name }}' not found in Key Vault."
             $hasError = $true
           } else {
             Write-Host "✓ common_sp_appid retrieved (length: $($appId.Length))"
@@ -458,7 +470,7 @@ jobs:
           
           $spSecret = $Env:common_sp_secret_value
           if ([string]::IsNullOrWhiteSpace($spSecret)) {
-            Write-Error "common_sp_secret_value is empty! Secret '${{ env.COMMON_SERVICE_PRINCIPAL_KV_S_NAME_SECRET }}' not found in Key Vault."
+            Write-Error "common_sp_secret_value is empty! Secret '${{ env.common_sp_secret_seeding_kv_name }}' not found in Key Vault."
             $hasError = $true
           } else {
             Write-Host "✓ common_sp_secret retrieved (length: $($spSecret.Length))"
@@ -466,7 +478,7 @@ jobs:
           
           $spOid = $Env:project_sp_oid_value
           if ([string]::IsNullOrWhiteSpace($spOid)) {
-            Write-Error "project_sp_oid_value is empty! Secret '${{ env.PROJECT_SERVICE_PRINCIPAL_KV_S_NAME_OID }}' not found in Key Vault."
+            Write-Error "project_sp_oid_value is empty! Secret '${{ env.project_service_principal_OID_seeding_kv_name }}' not found in Key Vault."
             $hasError = $true
           } else {
             Write-Host "✓ project_sp_oid retrieved (length: $($spOid.Length))"
